feat: implement goals 08 and 09 attended beta
